# Scintillator

./: .gitignore  CMakeLists.txt  GNUmakefile  README  Scintillator.cc  Scintillator.in  perspective.mac  plotNTuple.C  run_long.mac  run_short.mac  scintillation.root  scintillation_config1.root  scintillation_config2.root  scintillation_config2_coating_guide10x13.root  scintillation_config2_coating_guide13x13.root  scintillation_config2_coating_guide26x20.root  scintillation_config3_coating_guide10x13_38deg.root  scintillation_config3_coating_guide10x13_45deg.root  scintillation_config3_coating_guide20x13_38deg.root  scintillation_config3_coating_guide30x13_38deg.root  scintillation_config3_coating_guide50x13_38deg.root  scintillation_config3_coating_guide50x13_38deg_correct.root  scintillation_config4_coating_guide20x13_38deg.root  sr_source.mac  vis.mac
header/: ActionInitialization.hh  ConfigFile.hh  DetectorConstruction.hh  EventAction.hh  Physics.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
mac/: gui.mac  init_vis.mac  plotNTuple.C  run_long.mac  run_long_muon.mac  run_long_positron.mac  run_short.mac  run_single.mac  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  Physics.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
